...
import { navigationMiddleware } from './middleware';
import CustomHeader from './CustomHeader';
import { HomeIcon, ClockIcon, ProfileIcon, XStocksIcon } from '@components/Common/Icons';
import { BottomNavigation } from 'react-native-paper';
import { useMemo } from 'react';
import Home from '@screens/Home';
import Profile from '@screens/Profile';
import Search from '@screens/Search';
import XStocks from '@screens/XStocks';
import Transactions from '@screens/Transactions';
import CoinDetail from '@screens/CoinDetail';
import Trade from '@screens/Trade';
import Send from '@screens/Send';
...
								return 'Home';
							case 'Transactions':
								return 'Activity';
							case 'XStocks':
								return 'xStocks';
							case 'Profile':
								return 'Portfolio';
							default:
								return route.name;
						}
					}}
					style={styles.bottomNavBar} // Use StyleSheet
				/>
...
