...
	const headerStyle = useMemo(() => ({
		backgroundColor: theme.colors.background
	}), [theme.colors.background]);

	return (
		<Appbar.Header style={headerStyle}>
			{showBackButton && <Appbar.BackAction testID="back-button" onPress={() => navigation.goBack()} />}
			<Appbar.Content title={route.name} />
		</Appbar.Header>
	);
};

export default CustomHeader;
...
