...
		}

		if (privateKeyState.isVisible && privateKeyState.privateKey) {
			return privateKeyState.privateKey;
		}

		return '••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••';
	}, [privateKeyState]);

	const getEyeIconName = useCallback(() => {
		if (privateKeyState.isLoading) {
			return 'loading';
		}
...
