appId: com.nicolasmartin.dankfolio
env:
    jupSymbol: "jup"
    solSymbol: "sol"
    dankSymbol: "dank"
    moonSymbol: "moon"
---
- runFlow: ../../common/app-setup.yaml

# Navigate to trade screen via trending coin
- tapOn:
      id: "trending-coin-item-${jupSymbol}"
- tapOn:
      id: "trade-button-${jupSymbol}"

# Test: Change TO token to DANK and validate
- assertVisible:
      id: "to-token-selector"
- tapOn:
      id: "to-token-selector"
- waitForAnimationToEnd:
      timeout: 3000
- assertVisible:
      id: "token-search-input"
- tapOn:
      id: "search-result-${dankSymbol}"
- waitForAnimationToEnd

# Enter basic amount to test token selection worked
- tapOn:
      id: "amount-percentage-text-100"
- waitForAnimationToEnd

- runFlow:
      file: ../../components/trade-token-selector.yaml
      env:
          FROM_SYMBOL: ${solSymbol}
          FROM_AMOUNT: "2.5"
          FROM_BALANCE: "2.50"
          FROM_USD_VALUE: "246.13"
          TO_SYMBOL: ${dankSymbol}
          TO_AMOUNT: "5830818.45"
          TO_BALANCE: "5,000,000"

# Test: Change FROm token to MOOn and validate
- assertVisible:
      id: "from-token-selector"
- tapOn:
      id: "from-token-selector"
- waitForAnimationToEnd:
      timeout: 3000
- assertVisible:
      id: "token-search-input"
- tapOn:
      id: "search-result-${moonSymbol}"
- waitForAnimationToEnd
- tapOn:
      id: "amount-percentage-text-100"
- waitForAnimationToEnd
- runFlow:
      file: ../../components/trade-token-selector.yaml
      env:
          FROM_SYMBOL: ${moonSymbol}
          FROM_AMOUNT: "250000"
          FROM_BALANCE: "250,000"
          FROM_USD_VALUE: "307.50"
          TO_SYMBOL: ${dankSymbol}
          TO_AMOUNT: "4821.42"
          TO_BALANCE: "5,000,000"
