appId: com.nicolasmartin.kaiju
env:
    FROM_SYMBOL: "sol"
    TO_SYMBOL: "jup"
    TRADE_AMOUNT_FROM: "0.1"
---
# We do have a trade token component but these are more spcific to the trade screen and confirmation logic
- runFlow: ../common/app-setup.yaml

- tapOn:
      id: "trending-coin-item-${TO_SYMBOL}"

- assertVisible:
      id: "trade-button-${TO_SYMBOL}"
- tapOn:
      id: "trade-button-${TO_SYMBOL}"
- assertVisible:
      id: "trade-screen"

- assertVisible: ".*FROM.*"
- assertVisible:
      id: "from-token-selector"
- assertVisible: ".*TO.*"
- assertVisible:
      id: "to-token-selector"

- tapOn:
      id: "from-token-selector-amount-input"
- inputText: "${TRADE_AMOUNT_FROM}"
- assertVisible:
      id: "from-token-selector-amount-input"

- waitForAnimationToEnd
- assertVisible:
      id: "to-token-selector-amount-input"

- tapOn: ".*FROM.*"
- tapOn:
      id: "amount-percentage-text-50"
- tapOn:
      id: "amount-percentage-button-50"

- assertVisible:
      id: "from-token-selector-amount-input"

- waitForAnimationToEnd

# 7. Verify Trade Details are visible (optional, but good check)
- assertVisible:
      id: "trade-details-card"
- assertVisible:
      id: "trade-details-price-impact"
- assertVisible:
      id: "trade-details-network-fee"
- assertVisible:
      id: "trade-button"
- tapOn:
      id: "trade-button"

- waitForAnimationToEnd
- assertVisible:
      id: "confirm-swap-button"
- tapOn:
      id: "confirm-swap-button"
- waitForAnimationToEnd

- assertVisible: ".*Transaction Finalized.*"
- tapOn:
      id: "trade-status-action-button"

- waitForAnimationToEnd
- assertNotVisible:
      id: "confirm-swap-button"
- assertVisible:
      id: "home-screen"
